feat: plug in external services to real data (86c7v04qa)
